[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.10803
margin_right = 1.10803
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIVBox" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -60.0
margin_bottom = 60.0
size_flags_horizontal = 0
size_flags_vertical = 2
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UIVBox"]
margin_right = 1024.0
margin_bottom = 14.0
text = "Client"
align = 1
valign = 1

[node name="NameHBox" type="HBoxContainer" parent="UIVBox"]
margin_top = 14.0
margin_right = 1024.0
margin_bottom = 38.0
size_flags_horizontal = 3
alignment = 1

[node name="NameLabel" type="Label" parent="UIVBox/NameHBox"]
margin_left = 458.0
margin_top = 5.0
margin_right = 504.0
margin_bottom = 19.0
text = "Name: "

[node name="NameEdit" type="LineEdit" parent="UIVBox/NameHBox"]
margin_left = 508.0
margin_right = 566.0
margin_bottom = 24.0
text = "Player"

[node name="ServerIPHBox" type="HBoxContainer" parent="UIVBox"]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 62.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="ServerLabel" type="Label" parent="UIVBox/ServerIPHBox"]
margin_left = 433.0
margin_top = 5.0
margin_right = 490.0
margin_bottom = 19.0
text = "Server IP"

[node name="ServerIPEdit" type="LineEdit" parent="UIVBox/ServerIPHBox"]
margin_left = 490.0
margin_right = 590.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
text = "47.41.16.52"

[node name="ServerPortHBox" type="HBoxContainer" parent="UIVBox"]
margin_top = 62.0
margin_right = 1024.0
margin_bottom = 86.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="ServerLabel" type="Label" parent="UIVBox/ServerPortHBox"]
margin_left = 427.0
margin_top = 5.0
margin_right = 497.0
margin_bottom = 19.0
text = "Server Port"

[node name="ServerPortEdit" type="LineEdit" parent="UIVBox/ServerPortHBox"]
margin_left = 497.0
margin_right = 597.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
text = "25525"

[node name="JoinButton" type="Button" parent="UIVBox"]
margin_left = 494.0
margin_top = 86.0
margin_right = 529.0
margin_bottom = 106.0
size_flags_horizontal = 4
text = "Join"

[node name="Status" type="Label" parent="UIVBox"]
margin_top = 106.0
margin_right = 1024.0
margin_bottom = 120.0
[connection signal="pressed" from="UIVBox/JoinButton" to="." method="_on_JoinButton_pressed"]
